# cyberdog2_nx

./: .gitignore  README.md
bridges/cyberdog_grpc/protos/: cyberdog_app.proto
bridges/embed_protocol/: CMakeLists.txt  package.xml
bridges/embed_protocol/include/embed_parser/: can_parser.hpp
bridges/embed_protocol/include/embed_protocol/: common.hpp  protocol_base.hpp
bridges/embed_protocol/include/protocol/can/: can_utils.hpp  socket_can_receiver.hpp  socket_can_sender.hpp
bridges/protocol/ros/srv/: BesHttp.srv
interaction/: README.md
interaction/cyberdog_action/include/cyberdog_action/: cyberdog_hand_action.hpp
interaction/cyberdog_action/src/: cyberdog_hand_action.cpp
interaction/cyberdog_audio/include/cyberdog_audio/: audio_play.hpp  cyberdog_audio.hpp
interaction/cyberdog_audio/src/: cyberdog_audio.cpp
motion/motion_utils/: CMakeLists.txt
utils/cyberdog_common/: CMakeLists.txt
utils/cyberdog_parameter/cmake/: FindCython.cmake  functions.cmake
